--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,7 @@
-job:
-  only:
-    - master
-  before_script:
-    - git config user.email "yosra.jabri@gmail.com"
-    - git config user.name "yosra2020"
-    - git config user.password "Youchigie2020@"
-    - git remote set-url origin "https://gitlab.com/yosra2020/TestProject.git" 
+stages:
+    - test
 
-  script: 
-    - git add --all
-    - git push -all
+test:
+    stage: test
+    script:
+        - echo "Success!"
